# Delta

./: .gitignore  Cargo.toml  Makefile  README.md  RULES.md  delta
.github/: SECURITY.md
.github/workflows/: rust.yml
examples/: arithmetic.de  compile_test.de  conditionals.de  hello.de  hello_compiled.de  showcase.de  simple.de
src/: ast.rs  codegen.rs  lexer.rs  main.rs  parser.rs
